fixed alignment of project in project section

--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -2,7 +2,7 @@
   margin-left: auto;
   margin-right: auto;
   text-align: center;
-  width: 100vw;
+  width: 100%;
 }
 
 h1 {
@@ -69,6 +69,7 @@ p {
 }
 
 #fact-container {
+  color: blueviolet;
   margin-top: 20px;
   height: 1rem;
 }
@@ -98,26 +99,30 @@ p {
 
 .project {
   display: inline-flex;
+  justify-content: center;
   padding-bottom: 50px;
 }
 
 .project img {
-  width: 35vw;
+  width: 35%;
 }
 
 .project-info {
-  width: 30vw;
+  width: 30%;
   margin: 20px;
   display: flex;
-  flex-wrap: wrap;
-  align-content: center;
+  flex-direction: column;
+  align-items: center;
   justify-content: center;
+}
+
+.project-info p {
+  margin: 0;
 }
 
 .project-info a {
   background-color: white;
   border-radius: 10px;
-  font-size: 1.2rem;
   padding: 5px;
   margin: inherit;
   text-decoration: none;
@@ -186,6 +191,11 @@ p {
     width: auto;
   }
 
+  /* projects section */
+  .project-info a {
+    font-size: 1rem;
+  }
+
   /* photography section */
   .photo-container {
     width: 300px;
@@ -218,7 +228,7 @@ p {
   }
 
   p {
-    width: 50vw;
+    width: 50%;
     font-size: 25px;
   }
 
@@ -244,7 +254,6 @@ p {
   }
 
   #fact-container {
-    color: blueviolet;
     font-size: 25px;
   }
     
@@ -252,6 +261,11 @@ p {
   #about-container img {
     height: 60vh;
   }    
+
+  /* projects section */
+  .project-info a {
+    font-size: 1.5rem;
+  }
 
   /* photography section */
   .photo-container {
@@ -266,6 +280,6 @@ p {
 
   /* blog section */
   .blog-post p {
-    width: 40vw;
+    width: 40%;
   }
 }
